--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -1,15 +1,16 @@
 @charset "UTF-8";
 
-/* Body styles */
-html, body {
+
+html,
+body {
     height: 100%;
     margin: 0;
 }
 
 body {
     font-family: Arial, sans-serif, system-ui, -apple-system,
-        BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
-        'Open Sans', 'Helvetica Neue', sans-serif;
+    BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+    'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
     padding: 0;
     flex-direction: column;
@@ -21,7 +22,11 @@ main {
 }
 
 
-/* Header styles */
+/* ---------------------------------------------*/
+/* Header                                       */
+/* ---------------------------------------------*/
+
+
 header {
     background-color: hsla(217, 63%, 66%, 0.929);
     color: #fff;
@@ -32,9 +37,9 @@ header {
 }
 
 .logo {
-    font-size: 35px;
+    font-size: 40px;
     font-weight: 700;
-    color: rgb(247, 249, 250);
+    color: #e4e4e7;
     cursor: pointer;
     margin-left: 60px;
 }
@@ -66,7 +71,7 @@ nav ul li a {
     text-decoration: none;
     color: #fff;
     font-weight: 450;
-    font-size: 22px;
+    font-size: 25px;
 }
 
 .login {
@@ -84,22 +89,27 @@ nav ul li a {
 
 h1 {
     text-align: center;
-    margin: 50px auto 20px;
-    font-size: 46px;
+    margin: 50px auto 15px;
+    font-size: 55px;
     color: rgb(57, 76, 248);
 }
 
 p {
     text-align: center;
-    font-size: 24px;
+    font-size: 26px;
+    margin-bottom: 50px;
 }
 
 
+/* ---------------------------------------------*/
+/* Map                                 */
+/* ---------------------------------------------*/
 
 
 #map {
-    height: 400px;
-    width: 700px;
+    height: 500px;
+    width: 80%;
+    border-radius: 5px;
     justify-content: center;
     place-items: center;
     align-items: center;
@@ -111,11 +121,11 @@ p {
     margin: 20px auto;
     background-color: #0000ff;
     color: #fff;
-    padding: 5px 15px;
+    padding: 5px 25px;
     border-radius: 5px;
     border: 1px solid #0000ff;
     display: block;
-    font-size: 24px;
+    font-size: 30px;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
 }
 
@@ -129,7 +139,7 @@ footer {
     align-items: center;
     width: 100%;
     padding: 10px 0;
-    margin-top: 150px;
+    margin-top: 130px;
     background-color: #d2dade;
 }
 
@@ -141,24 +151,33 @@ footer {
 }
 
 .social-icons a i {
-    font-size: 30px;
+    font-size: 35px;
     color: #000;
     margin-top: 35px;
 }
 
 .copyright {
     text-align: right;
-    font-size: 18px;
+    font-size: 25px;
     margin-top: 55px;
     margin-right: 60px;
     display: block;
     float: right;
 }
 
-/* Media query for responsive design */
+.list {
+    margin-left: 60px;
+    margin-right: 60px;
+}
+
+
+/* ---------------------------------------------*/
+/* Media query                                 */
+/* ---------------------------------------------*/
+
+
 @media screen and (max-width: 768px) {
 
-    /* Flexbox container for main content */
     main {
         display: flex;
         flex-direction: column;
@@ -166,14 +185,11 @@ footer {
         justify-content: center;
     }
 
-    /* Adjust map width */
     #map {
         width: 90%;
         height: 300px;
-        /* Adjust height as needed */
     }
 
-    /* Adjust button margin */
     .trackButton {
         margin-top: 20px;
     }
@@ -187,4 +203,39 @@ footer {
         margin: auto;
     }
 
+}
+
+
+/* Hamburger Menu for smaller screens */
+.hamburger {
+    display: none;
+    cursor: pointer;
+    font-size: 30px;
+    color: #ffffff;
+}
+
+/* Responsive design adjustments */
+@media screen and (max-width: 768px) {
+    .hamburger {
+        display: block;
+    }
+
+    nav ul {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        text-align: center;
+    }
+
+    nav ul li {
+        margin: 10px 0;
+    }
+
+    nav ul li a {
+        display: block;
+    }
+
+    .nav-active {
+        display: flex;
+    }
 }
